--- a/src/components/basicos/layout/Card.css
+++ b/src/components/basicos/layout/Card.css
@@ -1,19 +1,24 @@
 .Card {
-    background-color: red;
-    border: 3px solid red;
-    border-radius: 10px;
-    overflow: hidden;
-    margin: 10px;
+  background-color: red;
+  border: 3px solid red;
+  border-radius: 10px;
+  overflow: hidden;
+  margin: 10px;
+  display: flex;
+  flex-direction: column;
+  min-width: 300px;
+  max-width: 300px;
 }
 
 .Card .Title {
-    padding: 5px 0px;
-    display: flex;
-    justify-content: center;
+  padding: 5px 0px;
+  display: flex;
+  justify-content: center;
 }
 
 .Card .Content {
-    background-color: #fff;
-    color: black;
-    padding: 10px;
+  flex-grow: 1;
+  background-color: #fff;
+  color: black;
+  padding: 10px;
 }
