--- a/src/index.css
+++ b/src/index.css
@@ -3,12 +3,16 @@ body {
   color: white;
   font-family: Oswald;
   text-align: center;
+  font-size: 1.4em;
 }
 
-h1, h2, h3 {
+h1,
+h2,
+h3 {
   font-weight: 200;
 }
- h2, h3 {
+h2,
+h3 {
   font-weight: 200;
   margin: 0;
 }
