--- a/src/components/basicos/layout/Card.css
+++ b/src/components/basicos/layout/Card.css
@@ -1,6 +1,5 @@
 .Card {
-  background-color: red;
-  border: 3px solid red;
+  border: 3px solid;
   border-radius: 10px;
   overflow: hidden;
   margin: 10px;
@@ -8,6 +7,7 @@
   flex-direction: column;
   min-width: 300px;
   max-width: 300px;
+  min-height: 200px;
 }
 
 .Card .Title {
