--- a/src/components/repeticao/TabelaProduto.css
+++ b/src/components/repeticao/TabelaProduto.css
@@ -10,3 +10,8 @@ table {
 .Impar {
   background-color: rgb(230, 228, 226);
 }
+
+.Title-table {
+  background-color: rgb(73, 73, 225);
+  color: white;
+}
